updated: ConstructionRequest and ConstructionRequestRepository (deleted user relation)
created:
ConstructionRequestService
ConstructionRequestDTO
ConstructionRequestStatusDTO
ConstructionRequestMapper
ConstructionRequestController
